반복문 추가 설명

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # ❌ Rust 빌드 아티팩트 제외
-**/*/target/  # Cargo 빌드 출력물
+target/
+**/target/
+# ❌ Cargo.lock 제외 (애플리케이션일 경우)
 **/*.rs.bk  # Rust 파일 백업본
 
 # ❌ Cargo.lock 제외 (라이브러리일 경우)
